importing socket.io as cdn

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "pathfinding": "^0.4.18",
-    "socket.io": "^3.0.3"
+    "socket.io": "3.0.3"
   }
 }
